# distributed_storage

./: Dockerfile  README.md  config.yaml  docker-compose.yml  pyproject.toml  requirements.txt
distributed_storage/: client.py  data_transfer_api.proto  data_transfer_api_pb2.py  data_transfer_api_pb2_grpc.py  main.py  storage_api.py  update_time.py  value.py  xmlClient.py
distributed_storage/api/: interconnect_storage_api.py  storage_api.py  user_storage_api.py
distributed_storage/environment_variables/: EnvironmentVariable.py  ExposedGrpcPort.py  InnerXmlRpcPort.py  OtherNodes.py  OtherNodesPorts.py  redis_nodes_suffix.py
distributed_storage/proto/: data_transfer_api.proto  data_transfer_api_pb2.py  data_transfer_api_pb2_grpc.py
distributed_storage/storage/: dictionary_storage.py  low_consistent_master_storage.py  outside_storage.py  redis_storage.py  storage.py  update_time.py  value.py  weakly_consistent_storage.py
distributed_storage/storage/majority/: major_get_response.py  major_response.py  major_store_response.py
distributed_storage/storage/types/: high_value_version.py  update_time.py  value.py
distributed_storage/storage_servers/: interconnect_storage_server.py  outside_storage_server.py
distributed_storage/storage_servers/majority/: major_get_response.py  major_response.py  major_store_response.py
tests/: storage_api_unit_tests.py
tests/distributed_storage/storage/: value.py
tests/distributed_storage/storage_servers/majority/: majority_test.py
